--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,5 @@
 baseurl = "https://Ippokratis.github.io/bookshelf/"
-title = "Hugo Site is pain"
+title = "Hugo Site is pain. Too much pain"
 languageCode = "en-us"
 
 
